load("@rules_mojo//mojo:mojo_binary.bzl", "mojo_binary")
load("@rules_mojo//mojo:mojo_library.bzl", "mojo_library")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")


# Binary that uses Firebolt library
mojo_binary(
    name = "firebolt_example",
    srcs = ["src/firebolt_example.mojo"],
    deps = ["@firebolt//:firebolt"],
    visibility = ["//visibility:public"],
)

# Create a Parquet library for integration testing.
py_binary(
    name = "create_parquet",
    srcs = ["src/create_parquet.py"],
    deps = ["@pypi//pyarrow"],
    visibility = ["//visibility:public"],
)
