###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "herringbone")

# Add rules_mojo dependency using Bzlmod
bazel_dep(name = "rules_mojo", version = "0.6.0")

# Add rules_python dependency for Python support
bazel_dep(name = "rules_python", version = "1.0.0")

# Configure Python interpreter and pip dependencies
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

# Add Firebolt library using git_override since it's not in BCR
bazel_dep(name = "firebolt", version = "0.0.0")

# Override firebolt with GitHub repository and patch with BUILD files
git_override(
    module_name = "firebolt",
    commit = "427ade85c59f88ecdeeb1c95232a496cfc7e2ad5",  # Use latest commit, or specify a specific commit hash
    patch_strip = 1,
    patches = ["//:firebolt.patch"],
    remote = "https://github.com/kszucs/firebolt.git",
)
