
# Add Firebolt library using git_override since it's not in BCR
bazel_dep(name = "firebolt", version = "0.0.0")

# Override firebolt with GitHub repository and patch with BUILD files
git_override(
    module_name = "firebolt",
    commit = "b2a11db5ce19aadb5fb0ac2dc8bf4ce2856a38d8",  # Use latest commit, or specify a specific commit hash
    patch_strip = 1,
    patches = ["//:firebolt.patch"],
    remote = "https://github.com/winding-lines/firebolt.git",
)
