"""Define the Mojo toolchain"""

# Version of Mojo to use.
PACKAGE_VERSION = "0.25.6.0.dev2025091705"

BASE_URL = "https://dl.modular.com/public/nightly/python"

mojo = use_extension("@rules_mojo//mojo:extensions.bzl", "mojo")
mojo.toolchain(
    base_url = BASE_URL,
    use_prebuilt_packages = True,
    version = PACKAGE_VERSION,
)
use_repo(mojo, "mojo_toolchains")

